Bug 327783 - "Create New" in context menu of directory does nothing
Summary: "Create New" in context menu of directory does nothing
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.11.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL: http://www.youtube.com/watch?v=MHriAB...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-11-18 21:40 UTC by Christoph Haag
Modified: 2013-11-22 13:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Haag 2013-11-18 21:40:02 UTC
I thought I make a video to say it best.

I'm using Archlinux's [kde-unstable] repository, so 4.11.90.

The context menu on the background of the folder panel works as expected. But right clicking on a directory and then trying to create a new folder or file does nothing.

It happens in all three viewmodes but "details" with the tree view is the one I always use.

I think in 4.11 it worked, but I'm not sure.

Reproducible: Always

Steps to Reproduce:
1. Right click directory
2. Try to create a directory or file
Actual Results:  
Nothing happens

Expected Results:  
New directory or file should be created
Comment 1 Frank Reininghaus 2013-11-18 22:30:36 UTC
Thanks for the bug report! I can reproduce the problem.

The problem disappears if I first revert

http://quickgit.kde.org/?p=kde-baseapps.git&a=commit&h=dd16a11dfd3624af5d964d1a2309b73012bbb8d6

and then

http://quickgit.kde.org/?p=kde-baseapps.git&a=commit&h=d0a9410e32f34658728201fd659583c3126a6c9a

So I suspect that the latter commit introduced the problem.
Comment 2 Frank Reininghaus 2013-11-18 23:10:59 UTC
I think I've found out what the problem is. A proposed fix is here:

https://git.reviewboard.kde.org/r/113930/

Testing and feedback would be appreciated.
Comment 3 Frank Reininghaus 2013-11-20 23:43:51 UTC
Git commit 2736d24f98c2880713264250c42bc0309e86e8b9 by Frank Reininghaus.
Committed on 20/11/2013 at 23:41.
Pushed by freininghaus into branch 'KDE/4.12'.

Make the "Create New..." menu in the "item context menu" work again

Since https://git.reviewboard.kde.org/r/111989/, the "Create New..."
menu in the context menu that appears when right-clicking a folder was
not a child of the DolphinMainWindow any more, but of the context menu
itself. This is the reason why the dialog that asks for a file name
when choosing one of the "Create New..." options disappeared
immediately.

This patch makes sure that the main window is the parent of the
"Create New..." menu again.
REVIEW: 113930

M  +1    -1    dolphin/src/dolphincontextmenu.cpp

http://commits.kde.org/kde-baseapps/2736d24f98c2880713264250c42bc0309e86e8b9
Comment 4 Christoph Haag 2013-11-22 13:19:38 UTC
Sorry, I didn't really have time to compile and test.

But I can confirm it is fixed in 4.11.95.